feat(sbom groups): sample implementation
